[package]
name = "hyper"
version = "0.0.1"
authors = ["Gustavo <ordazsgustavo@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.1.2"
nom_locate = "3.0.0"

[dev-dependencies]
pretty_assertions = "0.7.2"
